# bimble

./: .gitignore  Cargo.toml  LICENSE.md  README.md  RegexLicense.md  build
.cargo/: config.toml
.github/workflows/: rust.yml
BUILDS/Bimble_lin/: Bimble
BUILDS/Bimble_win/: setup.bat
assets/: logo.kra
p/: cfg.bcf  main.bb
sam/: 0.bxe  cfg.bcf  main.bb
src/: main.rs
