[package]
name = "Bimble"
version = "1.0.0"
edition = "2021"
authors = ["Virtua-Startups"]
description = "The bimble programming language"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'



[dependencies]
clearscreen = "3.0.0"
colored = "2.1.0"
regex = "1.10.5"
to-binary = "0.4.0"
